2000-12-27  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* dic/README: New file.

2000-12-23  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* SKK-MK (SKK-MK-install-elc): Use `install-cp' instead of
	`install-files'.
	Use `install-elisp' instead of `install-elisp-modules'.
	Use `file-name-nondirectory' to calculate SPEC.
	(SKK-MK-install-package): Ditto.
	(SKK-MK-install-info): Use `install-cp' instead of
	`install-files'.
	Use `file-name-nondirectory' to calculate INFO-FILE.
	(DOCDIR): Removed.
	(ETCDIR): Ditto.
	(DICDIR): Ditto.
	(SKK_MODULES): Delete symbol of which source file does not exist.
	(SKK_INFO): Add relative path to filename.
	(SKK_TEXIS): Ditto.
	(SKK_TUTORIALS): Add relative paths to each filenames.
	(SKK_DICTIONARIES): Ditto.
	(install-cp): New function.
	(install-elisp): Ditto.
	(install-cp-1): Ditto.

2000-12-22  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e18.el (skk-e18-pre-command): Do not set char.
	(get-minibuffer): Use `with-current-buffer'.

2000-12-21  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e18.el: No longer work around problems solved in APEL 10.2
	or earlier.
	(skk-e18-adjust-local-variables-in-minibuffer): New function.

	* skk-tut.el (skk-tutorial): No longer work aronud problems under
	Emacs 18.

2000-12-21  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* skk-e18.el (exit-minibuffer@around@skk-e18-ad): Revive.

	* skk.el (exit-minibuffer@around@skk-ad): Remove nemacs and mule1
	part of advices.
	Defined for non-`nemacs' and non-`mule1' Emacsen using
	static-unless.
	
2000-12-20  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e18.el: Call `require' at toplevel for the feature `advice'.
	From Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>.

	(get-minibuffer, safe-run-hooks): New functions.
	(read-from-minibuffer): Use them.
	(skk-kana-input): Advise to work around a bug {until debugged}.

2000-12-19  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e18.el (read-from-minibuffer): Set the minibuffer window's